# cpu-scheduling-simulator

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: Brust.cpp  Brust.h  Event.cpp  Event.h  Parse_flag.cpp  Parse_flag.h  Prase_flag.cpp  Prase_flag.h  Priority_type.cpp  Priority_type.h  Process.cpp  Process.h  Schedule_state.h  Simulator.cpp  Simulator.h  Thread.cpp  Thread.h  main.cpp
src/scheduling_algo/: Scheduling_algorithm.h  algo_CUSTOM.h  algo_FCFS.h  algo_PRIORITY.h  algo_RR.h
